<resources>
    <string name="app_name">Cowboy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cowboy">Cowboy</string>
    <string name="start">Start</string>
    <string name="horse">Horse</string>
    <string name="cow">Cow</string>
    <string name="property">Property</string>
    <string name="chicken">Chicken</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="cancel">Cancel</string>
    <string name="enter_value">Enter value</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="close">Close</string>
    <string name="description">Description</string>
    <string name="balance">Balance</string>
    <string name="all">All</string>
    <string name="enter_your_name">Enter your name</string>
</resources>